@@ -1,3 +1,6 @@
+R1.3.3      02/12/2019    Kukhee Kim
+            add Mps communication diagnostics - RxFrameErrorCount and RxFrameCount
+
 R1.3.2      08/27/2018    Kukhee Kim
             Bug fixing for setBaseDivisor()
 
